<resources>
    <string name="app_name">Muse Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause / Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem_alpha">Alpha absolute:</string>
    <string name="muse_elem_beta">Beta absolute:</string>
    <string name="muse_elem_theta">Theta absolute:</string>
    <string name="muse_elem_delta">Delta absolute:</string>
    <string name="muse_elem_dar">DAR absolute:</string>
    <string name="muse_elem_dtr">DTR absolute:</string>
    <string name="classify">Classify</string>
    <string name="hint">Enter ID</string>
    <string name="stroke_positive">Stroke</string>
    <string name="stroke_negative">No Stroke</string>

    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecting">Connecting</string>
</resources>
